[package]
name = "network-tunnel"
version = "0.1.0"
rust-version = "1.64"
edition = "2021"
authors = ["Estuary developers <engineering@estuary.dev>"]
readme = "./README.md"
homepage = "https://estuary.dev/"
repository = "https://github.com/estuary/flow"
license = "BSL"

[[bin]]
name = "flow-network-tunnel"
path = "src/main.rs"

[dependencies]
flow_cli_common = { git = "https://github.com/estuary/flow" }

async-trait="0.1"
base64="0.13"
futures="0.3"
openssl-sys = { version = "0.9", features = ['vendored'] }
openssl = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.85", features = ["raw_value"]}
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["time", "json", "env-filter", "fmt"]}
tokio = { version = "1.24", features = ["full"] }
url = {version = "2.2", features = ["serde"]}
clap = { version = "^3", features = ["derive"] }
